# DoIP-Server-Client-with-MQTT

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: doip-client.h  doip-config.h  mqtt-subscriber.h
server/: mock-tcp-server-multiple-clients.cpp
settings/: config.cpp  config.example.ini  config.h
src/: doip-client.cpp  mqtt-subscriber.cpp
